Correct spacing

--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,6 @@ html {
   min-height: 112px;
   background: transparent;
   font: 14px "Poppins", serif;
-  background: #fff;
 }
 
 .input-field.input-field-style:focus,
